--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="grid1">
 
                 <!-- Добавете първото изображение с ширина 250px и височина 200px ↓ -->
-                  <img style="width:250px; height:200px" src="/Images/Картина 1.jpg">
+                  <img style="width:250px; height:200px" src="Картина 1.jpg">
 
 
                 <div class="top-left">1.</div>
@@ -66,7 +66,7 @@
             <div class="grid2">
 
                 <!-- Добавете второто изображение с ширина 250px и височина 200px ↓ -->
-                <img style="width:250px; height:200px" src="/Images/Картина 2.jpg">
+                <img style="width:250px; height:200px" src="Картина 2.jpg">
 
 
 
@@ -77,7 +77,7 @@
 
                 <!-- Добавете третото изображение с ширина 300px и височина 450px ↓ -->
 
-                <img style="width:300px; height:450px" src="/Images/Картина 3.jpg">
+                <img style="width:300px; height:450px" src="Картина 3.jpg">
 
                 <div class="top-left">3.</div>
             </div>
@@ -86,7 +86,7 @@
 
                 <!-- Добавете четвъртото изображение с ширина 500px и височина 250px ↓ -->
 
-                <img style="width:500px; height:250px" src="/Images/Картина 4.jpg">
+                <img style="width:500px; height:250px" src="Картина 4.jpg">
 
                 <div class="top-left">4.</div>
             </div>
